# MNSF_Dashboard

./: README.md
html/: alert.py  checkMonitor.py  fb_rewards.py  fireBlocksFunctions.py  fireBlocksFunctions_updated.py  force_print_location.py  kraken.toml  kraken_latest_rewards.toml  monitor.py  pyproject.toml  report.py  speedBlocks.py  test.py
html/Exchange_Functions/: Binance.py  Bybit.py  Gate.py  HR.py  Huobi.py  Kraken.py  Okx.py  falconx.py
html/data/: CustomUSDC.py  customCoins.py  customCoinsFB.py  customPos.py  fireBlocks.py  historic.py
html/fb_classes/: avax.py  btc_node.py  btc_node_blockchains_code_.py  cartesi.py  cosmos.py  eth_node.py  flow.py  harmony.py  lpt_info.py  lpt_node.py  near.py  oasis.py  polkadot.py  tezos.py
html/html/: 48h_reward.html  actions_page.php  assets.html  breakdown.html  currentFunding.html  daily_calculation.php  daily_calculation_test.php  daily_cum.php  fb_test.php  fundStore.py  funding.html  index.html  leverage.html  loans.php  monthly_reward.php  nav.html  positions.html  report.html  restart.php  rewards_values.py  spread.html  test_page.php  tmp.py  total.py
html/htmldependencies/: style.css
html/utils/: service.sh
services/: check.service  checkMonitor.service  cronjobs  fireBlocks.service  monitor.service  test.service
