[tool.poetry]
name = "dashboard"
version = "0.2.3"
description = "All the pip packages needed to be installed for running all areas of the dashbaord"
authors = ["ab7317 <ab@optimumcomplexity.com>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.0.0"
pytz = "2022.1"
requests = "2.25.1"
aiohttp = "3.9.5"
regex = "2024.4.16"
boto3 = "^1.34.142"
substrateinterface = "1.0.0"
substrate-interface = "1.7.8"
flow-py-sdk = "1.3.0"
web3 = "6.17.2"
base58 = "2.1.1"
pybit = "5.7.0"
pandas = "1.5.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
